--- a/package.json
+++ b/package.json
@@ -5,12 +5,10 @@
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.0.17",
-    "homepage": "https://joshjancula.github.io/"
-
+    "react-scripts": "1.0.17"
   },
   "scripts": {
-    "predeploy": "npm run build",
+    "predeploy": "npm run build",-
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
