--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "react-scripts": "1.0.17"
   },
   "scripts": {
-    "predeploy": "npm run build",-
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
